--- a/src/component/register.css
+++ b/src/component/register.css
@@ -1,6 +1,6 @@
 section {
-    background: url('/asset/screen.jpg') no-repeat center center fixed;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
+  /* background: url('/asset/screen.jpg') no-repeat center center fixed; */
+  background-size: cover;
+  height: 100vh;
+  /* overflow: hidden; */
 }
